@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7342 2004/10/04 20:53:10 cube Exp $
+$NetBSD: CHANGES,v 1.7343 2004/10/04 21:32:28 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4544,3 +4544,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated cppunit to 1.10.2nb1 [wulf 2004-10-04]
 	Updated ircservices to 5.0.41 [wiz 2004-10-04]
 	Added ion3-20040906 [cube 2004-10-04]
+	Updated mathomatic to 11.4 [minskim 2004-10-04]
+
